--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Attribution */
-.attribution { font-size: 11px; text-align: center; }
+.attribution { font-size: 11px; text-align: center; margin-top: 2rem;}
 .attribution a { color: hsl(228, 45%, 44%); }
 
 
